--- a/README.adoc
+++ b/README.adoc
@@ -1,1 +1,5 @@
-# tasklauncer-local
+# Task Launcher Local Sink
+
+To learn more about this application and the supported properties, please review the following link.
+
+include::spring-cloud-starter-stream-sink-task-launcher-local/README.adoc[]
