--- a/spring-cloud-starter-stream-sink-task-launcher-local/README.adoc
+++ b/spring-cloud-starter-stream-sink-task-launcher-local/README.adoc
@@ -6,12 +6,25 @@ in the message that is received.
 
 Any message that does not contain a `TaskLaunchRequest` will log an error.
 
+== Input
+
+=== Headers
+
+N/A
+
+=== Payload
+
+* `org.springframework.cloud.task.launcher.TaskLaunchRequest`
+
+== Output
+
+N/A (launches task to the local system).
+
+
 == Using the TaskLauncher
 A tasklauncher is a sink that consumes a `TaskLaunchRequest` message, deploys and launches a task using a Spring
 Cloud Deployer.  The task will use the --uri from the message to determine what artifact to deploy as well as the
-properties and arguments to execute the task.  An example of this using Spring Cloud Data Flow would look like this:
-
-`stream create foo --definition "triggertask --uri=maven://org.springframework.cloud.task.app:timestamp-task:jar:1.0.0.BUILD-SNAPSHOT --fixed-delay=5 | tasklauncher-local"`
+properties and arguments to execute the task.
 
 Another example would be to use a processor to translate a message from another source into a `TaskLaunchRequest` that
 would be sent to the tasklauncher sink.
@@ -21,4 +34,10 @@ would be sent to the tasklauncher sink.
 
 ```
 $ mvn clean package
+```
+
+=== Examples
+
+```
+java -jar task-launcher-local.jar
 ```
